[gd_scene load_steps=5 format=2]

[ext_resource path="res://control/joystick_002.gd" type="Script" id=1]
[ext_resource path="res://Asend/button/pngegg (2).png" type="Texture" id=2]
[ext_resource path="res://Asend/button/Circle_-_black_simple.svg.png" type="Texture" id=3]
[ext_resource path="res://Asend/button/button1.png" type="Texture" id=4]

[node name="joystick_002" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = -191.0
margin_right = 209.0
margin_bottom = -11.0
texture = ExtResource( 3 )

[node name="handle" type="TextureRect" parent="background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 25, 25 )
texture = ExtResource( 2 )
expand = true

[node name="TextureButton" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -207.0
margin_right = 307.0

[node name="shoot" type="TextureButton" parent="."]
anchor_left = 0.821289
anchor_top = 0.696667
anchor_right = 0.99707
anchor_bottom = 0.996667
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="pressed" from="shoot" to="." method="_on_shoot_pressed"]
